# crurl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: crates.yml  rust.yml
src/: main.rs  parse_headers.rs  request_builder.rs  structopt.rs
