[package]
name = "crurl"
version = "0.1.0"
authors = ["marilla"]
edition = "2018"
license = "MIT"
description = "Simplified http client"
readme = "README.md"
homepage = "https://github.com/mangelarilla/crurl"
repository = "https://github.com/mangelarilla/crurl"
keywords = ["http-client"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
reqwest = "0.9.21"